@@ -8,6 +8,7 @@
     model
     \item cox.zph would crash for a coxme model whose random effect
     contained a factor (odd issue with model.frame).
+    \item yates error for a coxph model with a strata * covariate interaction
 }}
 \section{Changes in version 3.2-11}{
   \itemize{
